Mon Jun 18 15:44:51 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: patch from Tony Graham to cleanup libxml2 detection

Sun Jun 17 17:42:33 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.[ch]: fixed xsltGetNsProp, i always forget
	  'namespace' is a reserved C++ identifier

Sun Jun 17 17:08:30 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* doc/xslt.html: adding 0.12.0 release

Sun Jun 17 13:15:48 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* configure.in: preparing 0.12.0 release
	* libxslt/transform.c: a bit of cleanup on the XInclude defaults
	* libxslt/xsltconfig.h.in: added doc inline comment
	* libxslt/xslt.[ch] libxslt/xsltproc.c: added more version informations
	  and enriched xsltproc --version to show them
	* doc/html/*.html: rebuilt the docs
	* doc/Makefile.am libxslt.spec.in: try to make sure John Fleck
	  tutorial ends up in the tars and RPMs

Sat Jun 16 23:58:57 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt.spec.in: updated the descriptions

Sat Jun 16 23:26:46 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/namespaces.[ch]: added a single namespace def copy
	  operation xsltCopyNamespace(). cleaned up xsltCopyNamespaceList()
	* libxslt/transform.c: cleaned up xsltCopyNode to cope with
	  any kind of input nodes.
	* libxslt/variables.c: checked and closed the last TODO about
	  namespace propagation
	* tests/docs/Makefile.am tests/general/Makefile.am
	  tests/general/bug-38-* tests/docs/bug-38-*: added a specific
	  regression test for #56115 

Sat Jun 16 09:27:27 MDT 2001 John Fleck <jfleck@inkstain.net>

	* updating tutorial: adding discussion of freeing memory, image
	files for callouts, link to xsltproc.c code

Sat Jun 16 15:23:43 CEST 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/variables.c: bug #56267 was still not fixed, forgot
	  to remove the old code
	* tests/general/bug-37-.xsl: wrong reference to 36 fixed, this does